--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-gesture-handler": "^2.20.0",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-paper": "^5.12.5",
+    "react-native-progress": "^5.0.1",
     "react-native-reanimated": "^3.15.5",
     "react-native-safe-area-context": "^4.11.1",
     "react-native-screens": "^3.34.0",
