--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
     "tailwind-react-native-classnames": "^3.0.1",
-    "twrnc": "^4.5.1"
+    "twrnc": "^4.5.1",
+    "expo-speech": "~12.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
