--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.7",
     "expo": "~51.0.28",
+    "expo-speech": "~12.0.2",
     "expo-status-bar": "~1.12.1",
     "moment": "^2.30.1",
     "react": "18.2.0",
@@ -39,7 +40,7 @@
     "react-navigation-stack": "^2.10.4",
     "tailwind-react-native-classnames": "^3.0.1",
     "twrnc": "^4.5.1",
-    "expo-speech": "~12.0.2"
+    "lottie-react-native": "6.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
